--- a/index.html
+++ b/index.html
@@ -94,10 +94,12 @@
             <div class="col-12 m-5"></div>
             <div class="col-12 col-sm-6 p-3">
               <h1 class="h2">
-                Empower Your Ambitions, Ignite Opportunities! Join Our
-                Community, Where Careers Soar and Dreams Unfold. Seize Your Next
-                Chapter – Offer and Find Jobs with Purpose and Passion. Your
-                Journey to Professional Fulfillment Starts Here
+                Help Finder er en praktisk app som kobler folk som trenger hjelp
+                med de som er villige til å tilby tjenester. Enten du er
+                enkeltperson eller bedrift, kan du søke etter hjelp eller tilby
+                dine ferdigheter. For en liten avgift på 15 kr kan du enkelt
+                legge ut en annonse om hjelp eller jobb, og knytte deg til
+                mennesker eller bedrifter som kan oppfylle dine behov.
               </h1>
             </div>
             <div class="col-12 col-sm-6">
@@ -106,8 +108,224 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <div class="row d-flex mt-5">
+            <div class="col-12 text-center">
+              <h2 class="mt-5">Top categories</h2>
+            </div>
+            <div
+              class="col-12 mt-5 d-flex gap-5 flex-column flex-sm-row flex-wrap align-items-center justify-content-center"
+            >
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <a href="" class="text-decoration-none text-dark">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img
+                        src="assets/images/download.jpg"
+                        class="img-fluid rounded-start"
+                        alt="..."
+                      />
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title text-uppercase text-center">
+                          Anlegg
+                        </h5>
+                        <p class="card-text text-center mt-4">
+                          3 tilgjengelige jobber
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="assets/images/download.jpg"
+                      class="img-fluid rounded-start"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-uppercase text-center">
+                        Anlegg
+                      </h5>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a
+                        natural lead-in to additional content. This content is a
+                        little bit longer.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="assets/images/download.jpg"
+                      class="img-fluid rounded-start"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-uppercase text-center">
+                        Anlegg
+                      </h5>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a
+                        natural lead-in to additional content. This content is a
+                        little bit longer.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="assets/images/download.jpg"
+                      class="img-fluid rounded-start"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-uppercase text-center">
+                        Anlegg
+                      </h5>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a
+                        natural lead-in to additional content. This content is a
+                        little bit longer.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="assets/images/download.jpg"
+                      class="img-fluid rounded-start"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-uppercase text-center">
+                        Anlegg
+                      </h5>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a
+                        natural lead-in to additional content. This content is a
+                        little bit longer.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card mb-3 col-12 col-m-3 custom-card-border"
+                style="max-width: 540px"
+              >
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img
+                      src="assets/images/download.jpg"
+                      class="img-fluid rounded-start"
+                      alt="..."
+                    />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title text-uppercase text-center">
+                        Anlegg
+                      </h5>
+                      <p class="card-text">
+                        This is a wider card with supporting text below as a
+                        natural lead-in to additional content. This content is a
+                        little bit longer.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <a
+                href=""
+                title="vis alle tilgjengelige jobber justify-self-center"
+                class="cta"
+                >VIS ALLE</a
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="hero-section">
+        <div class="container">
+          <div class="row mt-5 d-flex flex-column flex-sm-row">
+            <div class="col-12 m-5"></div>
+            <div class="col-12 col-sm-6">
+              <img src="assets/images/logo.png" alt="" class="hero-image" />
+            </div>
+            <div class="col-12 col-sm-6 p-3">
+              <h2 class="h2 text-center mt-4">
+                Empower your ambitions, ignite opportunities! Join our
+                community, where careers soar and dreams unfold. Seize your next
+                chapter – offer and find jobs with purpose and passion. Your
+                journey to professional fulfillment starts here ...
+              </h2>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="w-100 text-bg-primary p-2 mt-4">
+      <div class="container">
+        <div class="row mt-4 w-100 d-flex">
+          <div class="col-4">
+            <h4>Helpfinder</h4>
+            <div class="d-flex gap-2 align-items-center">
+              <div><img src="assets/images/twitter.png" alt="" /></div>
+              <div><img src="assets/images/facebook.png" alt="" /></div>
+              <div><img src="assets/images/instagram.png" alt="" /></div>
+            </div>
+          </div>
+          <div class="col-4"><h6>&copy; Nikolaos Digalakis</h6></div>
+          <div class="col-4">
+            <h4>Kontakt:</h4>
+            <div>
+              <h6>St. Mariegt 100</h6>
+              <a href="tel:+4712345678" class="text-dark">123 45 678</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
