--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="dist/css/styles.css" />
-    <title>Helpfinder || Home</title>
+    <title>Helpfinder || Hjem</title>
     <link rel="icon" href="assets/images/logo.png" />
   </head>
   <body>
     <header>
-      <nav class="navbar fixed-top text-bg-primary">
+      <nav class="navbar text-bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo.png" alt="" class="logo" />
             Helpfinder</a
           >
@@ -51,14 +51,17 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Home</a
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
+                    >Hjem</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="stillinger.html">Stillinger</a>
                 </li>
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
@@ -80,7 +83,7 @@
                       <a class="dropdown-item" href="#">Something else here</a>
                     </li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -276,8 +279,8 @@
             </div>
             <div class="col-12">
               <a
-                href=""
-                title="vis alle tilgjengelige jobber justify-self-center"
+                href="stillinger.html"
+                title="vis alle tilgjengelige jobber"
                 class="cta"
                 >VIS ALLE</a
               >
@@ -306,8 +309,8 @@
     </main>
     <footer class="w-100 text-bg-primary p-2 mt-4">
       <div class="container">
-        <div class="row mt-4 w-100 d-flex">
-          <div class="col-4">
+        <div class="row mt-4 w-100 d-flex align-items-end">
+          <div class="col-12 col-sm-4">
             <h4>Helpfinder</h4>
             <div class="d-flex gap-2 align-items-center">
               <div><img src="assets/images/twitter.png" alt="" /></div>
@@ -315,8 +318,17 @@
               <div><img src="assets/images/instagram.png" alt="" /></div>
             </div>
           </div>
-          <div class="col-4"><h6>&copy; Nikolaos Digalakis</h6></div>
-          <div class="col-4">
+          <div class="col-12 col-sm-4">
+            <h6>
+              <a
+                href="https://nikosdigalakisportfolio.netlify.app/"
+                class="text-dark text-decoration-none"
+              >
+                &copy; Nikolaos Digalakis
+              </a>
+            </h6>
+          </div>
+          <div class="col-12 col-sm-4">
             <h4>Kontakt:</h4>
             <div>
               <h6>St. Mariegt 100</h6>
