--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             <h4>Kontakt:</h4>
             <div>
               <h6>St. Mariegt 100</h6>
-              <a href="tel:+4712345678" class="text-dark">123 45 678</a>
+              <a href="tel:+4712345678" class="text-dark">TEL:123 45 678</a>
             </div>
           </div>
         </div>
