fixed footer on spesific jobbs

--- a/jobb.html
+++ b/jobb.html
@@ -118,7 +118,7 @@
         </div>
       </div>
     </main>
-    <footer class="w-100 text-bg-primary p-2 mt-auto position-sticky bottom-0">
+    <footer class="w-100 text-bg-primary p-2 mt-auto">
       <div class="container">
         <div
           class="row mt-4 w-100 d-flex flex-column flex-sm-row align-items-end"
