changed the href to some links

--- a/index.html
+++ b/index.html
@@ -124,7 +124,10 @@
                 class="card mb-3 col-12 col-m-3 custom-card-border"
                 style="max-width: 540px"
               >
-                <a href="" class="text-decoration-none text-dark">
+                <a
+                  href="stillinger.html"
+                  class="text-decoration-none text-dark"
+                >
                   <div class="row g-0">
                     <div class="col-md-4">
                       <img
