--- a/stillinger.html
+++ b/stillinger.html
@@ -127,7 +127,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -142,7 +142,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -159,7 +159,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -174,7 +174,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -189,7 +189,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -204,7 +204,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
@@ -219,7 +219,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="cta">Se mer</a>
+                <a href="jobb.html" class="cta">Se mer</a>
               </div>
             </div>
           </div>
