--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
-                      src="assets/images/download.jpg"
-                      class="img-fluid rounded-start"
+                      src="assets/images/supermarket1024x687.jpg"
+                      class="img-fluid rounded-start h-100"
                       alt="..."
                     />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-uppercase text-center">
-                        Anlegg
+                        Butikkmedarbeider
                       </h5>
                       <p class="card-text">
                         This is a wider card with supporting text below as a
@@ -182,15 +182,15 @@
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
-                      src="assets/images/download.jpg"
-                      class="img-fluid rounded-start"
+                      src="assets/images/Gartner.jpg"
+                      class="img-fluid rounded-start h-100"
                       alt="..."
                     />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-uppercase text-center">
-                        Anlegg
+                        Gartner
                       </h5>
                       <p class="card-text">
                         This is a wider card with supporting text below as a
@@ -208,15 +208,15 @@
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
-                      src="assets/images/download.jpg"
-                      class="img-fluid rounded-start"
+                      src="assets/images/sjafor-jobb.jpg"
+                      class="img-fluid rounded-start h-100"
                       alt="..."
                     />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-uppercase text-center">
-                        Anlegg
+                        Sjåfør
                       </h5>
                       <p class="card-text">
                         This is a wider card with supporting text below as a
@@ -234,15 +234,15 @@
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
-                      src="assets/images/download.jpg"
-                      class="img-fluid rounded-start"
+                      src="assets/images/betong.jpg"
+                      class="img-fluid rounded-start h-100"
                       alt="..."
                     />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-uppercase text-center">
-                        Anlegg
+                        Betong arbeider
                       </h5>
                       <p class="card-text">
                         This is a wider card with supporting text below as a
@@ -260,15 +260,15 @@
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img
-                      src="assets/images/download.jpg"
-                      class="img-fluid rounded-start"
+                      src="assets/images/barnehage-kompetanse.jpg"
+                      class="img-fluid rounded-start h-100"
                       alt="..."
                     />
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h5 class="card-title text-uppercase text-center">
-                        Anlegg
+                        Barnehage assistent
                       </h5>
                       <p class="card-text">
                         This is a wider card with supporting text below as a
