--- a/stillinger.html
+++ b/stillinger.html
@@ -100,8 +100,8 @@
           <div class="col-12 d-flex gap-5 flex-wrap">
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/Gartner.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
@@ -115,8 +115,8 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/betong.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
@@ -132,8 +132,8 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/sjafor-jobb.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
@@ -147,8 +147,8 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/gravetjenester.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
@@ -169,7 +169,7 @@
                 alt=""
               />
               <div class="card-body">
-                <h5 class="card-title text-center text-uppercase">Gartner</h5>
+                <h5 class="card-title text-center text-uppercase">Bygg</h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -179,12 +179,14 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/barnehage-kompetanse.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
-                <h5 class="card-title text-center text-uppercase">Gartner</h5>
+                <h5 class="card-title text-center text-uppercase">
+                  Barnehage arbeider
+                </h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -194,12 +196,14 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/supermarket1024x687.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
-                <h5 class="card-title text-center text-uppercase">Gartner</h5>
+                <h5 class="card-title text-center text-uppercase">
+                  Butikkmedarbeider
+                </h5>
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -209,8 +213,8 @@
             </div>
             <div class="card col-12 col-sm-4" style="width: 18rem">
               <img
-                src="assets/images/download.jpg"
-                class="card-img-top"
+                src="assets/images/Gartner.jpg"
+                class="card-img-top h-100"
                 alt=""
               />
               <div class="card-body">
