--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div class="container">
           <div class="row mt-5 d-flex flex-column flex-sm-row">
             <div class="col-12 m-5"></div>
-            <div class="col-12 col-sm-6 p-3">
+            <div class="col-12 col-sm-6 p-3 position-relative">
               <h1 class="h2">
                 Help Finder er en praktisk app som kobler folk som trenger hjelp
                 med de som er villige til å tilby tjenester. Enten du er
@@ -104,6 +104,8 @@
                 legge ut en annonse om hjelp eller jobb, og knytte deg til
                 mennesker eller bedrifter som kan oppfylle dine behov.
               </h1>
+              <div class="position-absolute custom-circle-light-blue"></div>
+              <div class="position-absolute custom-circle-pink"></div>
             </div>
             <div class="col-12 col-sm-6">
               <img src="assets/images/logo.png" alt="" class="hero-image" />
